--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "json-server": "^0.16.3",
+    "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
